force-app/main/default/objects/Configurar_Centro_Imputaciones__c/Configurar_Centro_Imputaciones__c.object-meta.xml
<CustomObject>
    <label>Configurar_Centro_Imputaciones</label>
    <nameField>
        <label>Nombre de Configurar_Centro_Imputaciones</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurar_Centro_Imputaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>