force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Activar_Aviso_Umbral_Horas__c.field-meta.xml
<CustomField>
    <fullName>Activar_Aviso_Umbral_Horas__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activa el aviso no bloqueante al guardar cuando un dia supera el umbral de horas.</description>
    <label>Activar aviso umbral horas</label>
    <type>Checkbox</type>
</CustomField>