force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Ams_Creado_Filtro_Dias_Atras__c.field-meta.xml
<CustomField>
    <fullName>Ams_Creado_Filtro_Dias_Atras__c</fullName>
    <description>0 = filtro AMS por defecto es el mes en curso. N mayor a 0 = desde hoy menos N dias hasta hoy (creado del caso).</description>
    <label>AMS filtro creado - dias hacia atras</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>