force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Ayuda_Admin_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Ayuda_Admin_Monitor__c</fullName>
    <description>Texto de ayuda para administradores en el modal Monitor del centro (antes en CMDT Ayuda_Admin__c).</description>
    <label>Ayuda admin monitor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>