force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Ayuda_Texto_General__c.field-meta.xml
<CustomField>
    <fullName>Ayuda_Texto_General__c</fullName>
    <description>Texto de ayuda visible en la cabecera del centro de imputaciones (todos los usuarios).</description>
    <label>Ayuda texto general</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>