force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Campo_Case_Motivo_Ams__c.field-meta.xml
<CustomField>
    <fullName>Campo_Case_Motivo_Ams__c</fullName>
    <description>API del campo en Case para filtrar la pestana Gestion AMS (ej. Reason). Vacio: Reason estandar.</description>
    <label>Campo Case motivo AMS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>