force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Color_Cal_Dia_Bloqueado_Fondo__c.field-meta.xml
<CustomField>
    <fullName>Color_Cal_Dia_Bloqueado_Fondo__c</fullName>
    <description>Fondo dia no imputable (bloqueado). Formato #RRGGBB.</description>
    <label>Color dia bloqueado (fondo)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>