force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Color_Cal_Dia_Fin_Semana_Fondo__c.field-meta.xml
<CustomField>
    <fullName>Color_Cal_Dia_Fin_Semana_Fondo__c</fullName>
    <description>Fondo fin de semana. Formato #RRGGBB.</description>
    <label>Color fin de semana (fondo)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>