force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Color_Cal_Dia_Meta_Fondo__c.field-meta.xml
<CustomField>
    <fullName>Color_Cal_Dia_Meta_Fondo__c</fullName>
    <description>Fondo dia que cumple jornada meta de horas. Formato #RRGGBB.</description>
    <label>Color dia meta cumplida (fondo)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>