force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Color_Cal_Dia_Parcial_Borde__c.field-meta.xml
<CustomField>
    <fullName>Color_Cal_Dia_Parcial_Borde__c</fullName>
    <description>Borde dia parcial. Formato #RRGGBB.</description>
    <label>Color dia parcial (borde)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>