force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Color_Cal_Dia_Parcial_Fondo__c.field-meta.xml
<CustomField>
    <fullName>Color_Cal_Dia_Parcial_Fondo__c</fullName>
    <description>Fondo dia con horas pero por debajo de jornada meta. Formato #RRGGBB.</description>
    <label>Color dia parcial (fondo)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>