force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Color_Cal_Dia_Sobre_Umbral__c.field-meta.xml
<CustomField>
    <fullName>Color_Cal_Dia_Sobre_Umbral__c</fullName>
    <description>Color de resalte cuando supera umbral horas en calendario. Formato #RRGGBB.</description>
    <label>Color sobre umbral horas</label>
    <length>7</length>
    <type>Text</type>
</CustomField>