force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Color_Cal_Dia_Vacio_Fondo__c.field-meta.xml
<CustomField>
    <fullName>Color_Cal_Dia_Vacio_Fondo__c</fullName>
    <description>Fondo dia sin horas imputadas en franja/calendario. Formato #RRGGBB.</description>
    <label>Color dia vacio (fondo)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>