force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Color_Grafico_Imputable__c.field-meta.xml
<CustomField>
    <fullName>Color_Grafico_Imputable__c</fullName>
    <description>Color imputable (facturable + no facturable) en leyenda del panel. Formato #RRGGBB.</description>
    <label>Color grafico imputable</label>
    <length>7</length>
    <type>Text</type>
</CustomField>