force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Color_Grafico_Meta_Progreso__c.field-meta.xml
<CustomField>
    <fullName>Color_Grafico_Meta_Progreso__c</fullName>
    <description>Color barra meta facturable mensual en el panel derecho. Formato #RRGGBB.</description>
    <label>Color grafico meta facturable</label>
    <length>7</length>
    <type>Text</type>
</CustomField>