force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Color_Grafico_No_Facturable__c.field-meta.xml
<CustomField>
    <fullName>Color_Grafico_No_Facturable__c</fullName>
    <description>Color no facturable en dona, leyenda e iconos del panel. Formato #RRGGBB.</description>
    <label>Color grafico no facturable</label>
    <length>7</length>
    <type>Text</type>
</CustomField>