force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Config_Key__c.field-meta.xml
<CustomField>
    <fullName>Config_Key__c</fullName>
    <label>Clave de configuración</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>