force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Criterio_Calculo_No_Facturable__c.field-meta.xml
<CustomField>
    <fullName>Criterio_Calculo_No_Facturable__c</fullName>
    <description>Documentacion visible en config del criterio de horas no facturables del grafico.</description>
    <label>Criterio calculo no facturable</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>