force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Criterios_Facturable_Filtros_JSON__c.field-meta.xml
<CustomField>
    <fullName>Criterios_Facturable_Filtros_JSON__c</fullName>
    <description>Reglas de campos Case e Imputacion para documentar criterios facturable / no facturable.</description>
    <label>Criterios facturable filtros JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>