force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Dias_franja_calendario__c.field-meta.xml
<CustomField>
    <fullName>Dias_franja_calendario__c</fullName>
    <label>Días en Calendario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>