force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Excepcion_Fin_Semana_User_Campo__c.field-meta.xml
<CustomField>
    <fullName>Excepcion_Fin_Semana_User_Campo__c</fullName>
    <description>API del campo User que define quien puede imputar en fin de semana aunque este bloqueado globalmente.</description>
    <label>Excepcion fin de semana: campo User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>