force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Excepcion_Fin_Semana_User_Valores__c.field-meta.xml
<CustomField>
    <fullName>Excepcion_Fin_Semana_User_Valores__c</fullName>
    <description>Valores del campo User (uno por linea o separados por coma) que permiten imputar en fin de semana.</description>
    <label>Excepcion fin de semana: valores User</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>