force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Excepciones_Fechas_Imputacion__c.field-meta.xml
<CustomField>
    <fullName>Excepciones_Fechas_Imputacion__c</fullName>
    <description>Fechas ISO (YYYY-MM-DD) donde se permite imputar aunque sea fin de semana o feriado y la regla general lo bloquee.</description>
    <label>Excepciones fechas imputacion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>