force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Festivos_Extra_MM_DD__c.field-meta.xml
<CustomField>
    <fullName>Festivos_Extra_MM_DD__c</fullName>
    <description>Festivos adicionales al calendario base Chile (formato MM-DD, comas o saltos de linea). Ej: 12-24</description>
    <label>Festivos extra (MM-DD)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>