force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Filtro_Consultor_User_Campo__c.field-meta.xml
<CustomField>
    <fullName>Filtro_Consultor_User_Campo__c</fullName>
    <description>API del campo User para filtrar resolutores visibles en combos admin.</description>
    <label>Filtro consultor: campo User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>