force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Filtro_Consultor_User_Valores__c.field-meta.xml
<CustomField>
    <fullName>Filtro_Consultor_User_Valores__c</fullName>
    <description>Valores del campo User que deben tener los resolutores mostrados en combos admin.</description>
    <label>Filtro consultor: valores User</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>