force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Filtro_Servicio_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Filtro_Servicio_Tickets__c</fullName>
    <description>Servicios Case (Servicio__c) permitidos en listados de tickets. Vacio = sin filtro global.</description>
    <label>Filtro servicio tickets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>