force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Guia_Uso_Texto__c.field-meta.xml
<CustomField>
    <fullName>Guia_Uso_Texto__c</fullName>
    <description>Texto introductorio opcional en el modal Guia de uso. Si esta vacio se usa el texto por defecto del componente.</description>
    <label>Guia de uso - texto introductorio</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>