force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Horas_Jornada__c.field-meta.xml
<CustomField>
    <fullName>Horas_Jornada__c</fullName>
    <label>Horas Jornada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>