force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Horas_Meta_Dia_Lab__c.field-meta.xml
<CustomField>
    <fullName>Horas_Meta_Dia_Lab__c</fullName>
    <description>Horas de jornada para metas facturables y calculo de dias habiles en el LWC (sustituye al valor del CMDT si esta informado).</description>
    <label>Horas meta jornada laboral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>