force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Imputacion_Meses_Adelante__c.field-meta.xml
<CustomField>
    <fullName>Imputacion_Meses_Adelante__c</fullName>
    <description>Excepcion para consultores: meses civiles posteriores al mes en curso en los que pueden imputar. 0 o vacio = solo el mes actual. No limita la consulta del calendario.</description>
    <label>Imputacion - meses adelante permitidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>