force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Imputacion_Meses_Retro__c.field-meta.xml
<CustomField>
    <fullName>Imputacion_Meses_Retro__c</fullName>
    <description>Excepcion para consultores: meses civiles anteriores al mes en curso en los que pueden imputar, editar o borrar. 0 o vacio = solo el mes actual. No limita la consulta del calendario.</description>
    <label>Imputacion - meses retro permitidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>