force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Limite_Soql_Desglose_Dia__c.field-meta.xml
<CustomField>
    <fullName>Limite_Soql_Desglose_Dia__c</fullName>
    <description>Limite de filas SOQL en desglose horario por dia (50-2000, defecto 400).</description>
    <label>Limite SOQL desglose dia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>