force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Limite_Soql_Mes_Agregacion__c.field-meta.xml
<CustomField>
    <fullName>Limite_Soql_Mes_Agregacion__c</fullName>
    <description>Limite de filas al listar imputaciones del mes para desglose (2000-50000, defecto 20000).</description>
    <label>Limite SOQL mes agregacion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>