force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Limite_Soql_Owner_Opciones__c.field-meta.xml
<CustomField>
    <fullName>Limite_Soql_Owner_Opciones__c</fullName>
    <description>Maximo owners en combobox admin (10-2000, defecto 200).</description>
    <label>Limite SOQL owners UI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>