force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Meta_Facturable_Pct__c.field-meta.xml
<CustomField>
    <fullName>Meta_Facturable_Pct__c</fullName>
    <description>Porcentaje meta facturable mensual que sobrescribe CMDT / valor por defecto si est� informado (1�100).</description>
    <label>Meta facturable % (sobrescribe CMDT)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>