force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Motivo_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Ticket__c</fullName>
    <label>Motivo Ticket</label>
    <type>TextArea</type>
</CustomField>