force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Motivos_Fallback__c.field-meta.xml
<CustomField>
    <fullName>Motivos_Fallback__c</fullName>
    <description>Si motivos operativos y el CMDT est�n vac�os, se usan estos valores API Reason antes del fallback Gestion_Interna del c�digo.</description>
    <label>Motivos AMS (reserva)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>