force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Motivos_Ultimo_Recurso__c.field-meta.xml
<CustomField>
    <fullName>Motivos_Ultimo_Recurso__c</fullName>
    <description>Lista final de motivos API si CMDT, principal y reserva estan vacios (defecto Gestion_Interna en codigo).</description>
    <label>Motivos ultimo Recurso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>