force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Numero_Ticket_Anclados__c.field-meta.xml
<CustomField>
    <fullName>Numero_Ticket_Anclados__c</fullName>
    <inlineHelpText>Permite definir la cantidad maxima de ticket que se pueden anclar</inlineHelpText>
    <label>Numero Ticket Anclados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>