force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Origen_Imputacion__c.field-meta.xml
<CustomField>
    <fullName>Origen_Imputacion__c</fullName>
    <description>Valor Origen/Source por defecto al guardar l�neas sin origen (por defecto MassiveLWC).</description>
    <label>Origen imputaci�n por defecto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>