force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Panel_Meta_Copy_JSON__c.field-meta.xml
<CustomField>
    <fullName>Panel_Meta_Copy_JSON__c</fullName>
    <description>Textos del panel derecho (mensajes y badges por tramo de meta). JSON editable desde la configuracion.</description>
    <label>Panel meta copy JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>