force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/PEP_Facturable__c.field-meta.xml
<CustomField>
    <fullName>PEP_Facturable__c</fullName>
    <label>PEP Facturable</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>