force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/PEP_Fallback__c.field-meta.xml
<CustomField>
    <fullName>PEP_Fallback__c</fullName>
    <description>Si �PEP siempre facturables� est� vac�o, se usan estos nombres de PEP antes del valor por defecto del c�digo (p. ej. C1-Z-PR-VAC).</description>
    <label>PEP facturables (reserva)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>