force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Permitir_Imputar_Feriados__c.field-meta.xml
<CustomField>
    <fullName>Permitir_Imputar_Feriados__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Si esta desmarcado, el LWC bloquea imputaciones en festivos (lista Chile + festivos extra).</description>
    <label>Permitir imputar en festivos</label>
    <type>Checkbox</type>
</CustomField>