force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Permitir_Imputar_Fin_Semana__c.field-meta.xml
<CustomField>
    <fullName>Permitir_Imputar_Fin_Semana__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Si esta desmarcado, el LWC bloquea imputaciones en sabado y domingo.</description>
    <label>Permitir imputar fin de semana</label>
    <type>Checkbox</type>
</CustomField>