force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Pestanas_Catalogo_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Pestanas_Catalogo_Tickets__c</fullName>
    <description>JSON con pesta�as del catalogo de tickets (mine, ams y personalizadas). Vacio = Mis tickets + Gestion AMS por defecto.</description>
    <label>Pestanas catalogo tickets</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>