force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Servicios__c.field-meta.xml
<CustomField>
    <fullName>Servicios__c</fullName>
    <label>Servicios</label>
    <type>TextArea</type>
</CustomField>