force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Servicios_Fallback__c.field-meta.xml
<CustomField>
    <fullName>Servicios_Fallback__c</fullName>
    <description>Si �Servicios AMS� est� vac�o, se usan estos valores antes de AMS-SAP / AMS-SAP-Mexico.</description>
    <label>Servicios AMS (reserva)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>