force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Servicios_Ultimo_Recurso__c.field-meta.xml
<CustomField>
    <fullName>Servicios_Ultimo_Recurso__c</fullName>
    <description>Lista final si principal y reserva de servicios estan vacios (defecto codigo AMS-SAP y AMS-SAP-Mexico).</description>
    <label>Servicios ultimo recurso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>