force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Tamano_Pagina_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Tamano_Pagina_Tickets__c</fullName>
    <description>Tama�o de p�gina al cargar tickets cuando el cliente no env�a pageSize (1�500; por defecto 200).</description>
    <label>Tama�o p�gina tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>