force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Texto_Aviso_Feriado__c.field-meta.xml
<CustomField>
    <fullName>Texto_Aviso_Feriado__c</fullName>
    <description>Mensaje al bloquear o avisar imputacion en dia festivo. Vacio = mensaje por defecto del LWC.</description>
    <label>Texto aviso feriado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>