force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Texto_Aviso_Fin_Semana__c.field-meta.xml
<CustomField>
    <fullName>Texto_Aviso_Fin_Semana__c</fullName>
    <description>Texto en el dialogo de confirmacion cuando la imputacion incluye fin de semana. Vacio = mensaje por defecto del LWC.</description>
    <label>Texto aviso fin de semana</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>