force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Texto_Aviso_Umbral_Horas__c.field-meta.xml
<CustomField>
    <fullName>Texto_Aviso_Umbral_Horas__c</fullName>
    <description>Mensaje al guardar imputaciones cuando un dia supera el umbral de horas. Placeholders: {horas}, {detalle}. Vacio = mensaje por defecto del LWC.</description>
    <label>Texto aviso umbral horas dia</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>