force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Texto_Confirmacion_Imputacion__c.field-meta.xml
<CustomField>
    <fullName>Texto_Confirmacion_Imputacion__c</fullName>
    <description>Linea extra en el dialogo Confirmar imputacion. Vacio = solo el resumen estandar del LWC.</description>
    <label>Texto confirmacion imputacion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>