force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Texto_Subtitulo_Centro__c.field-meta.xml
<CustomField>
    <fullName>Texto_Subtitulo_Centro__c</fullName>
    <description>Subtitulo bajo el titulo del centro de imputaciones (cabecera LWC).</description>
    <label>Texto subtitulo centro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>