force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Ui_Mostrar_Guia_Uso__c.field-meta.xml
<CustomField>
    <fullName>Ui_Mostrar_Guia_Uso__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Muestra el boton Guia de uso en el centro de imputaciones para consultores y administradores.</description>
    <label>Mostrar guia de uso</label>
    <type>Checkbox</type>
</CustomField>