force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Ui_Ocultar_Importar_Csv__c.field-meta.xml
<CustomField>
    <fullName>Ui_Ocultar_Importar_Csv__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Oculta la opcion Importar del menu CSV en el centro de imputaciones.</description>
    <label>UI ocultar importar CSV</label>
    <type>Checkbox</type>
</CustomField>