force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Ui_Ocultar_Panel_Trimestral__c.field-meta.xml
<CustomField>
    <fullName>Ui_Ocultar_Panel_Trimestral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Oculta el panel resumen trimestral facturable.</description>
    <label>UI ocultar panel trimestral</label>
    <type>Checkbox</type>
</CustomField>