force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Ui_Ocultar_Tab_Gestion_Ams__c.field-meta.xml
<CustomField>
    <fullName>Ui_Ocultar_Tab_Gestion_Ams__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Oculta la pesta�a Gestion AMS en catalogo de tickets.</description>
    <label>UI ocultar tab Gestion AMS</label>
    <type>Checkbox</type>
</CustomField>