force-app/main/default/objects/Configurar_Centro_Imputaciones__c/fields/Umbral_Aviso_Horas_Dia__c.field-meta.xml
<CustomField>
    <fullName>Umbral_Aviso_Horas_Dia__c</fullName>
    <description>Umbral en horas para avisos de �muchas horas en un mismo d�a� en el LWC (por defecto 10).</description>
    <label>Umbral aviso horas/d�a</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>